[package]
name = "messages-actix"
version = "0.1.0"
author = ["Dominique DORDAIN <dordaindominique@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
env_logger = "0.6"
serde = {version = "1.0", features = ["derive"]}
# serde is portmanteau for serialize-deserialize
serde_json = "1.0"
dotenv = "0.15"
